force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Total_RSF_w_o_parking__c.field-meta.xml
<CustomField>
    <fullName>Total_RSF_w_o_parking__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total RSF w/o parking</description>
    <label>Total RSF w/o parking</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>