force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Unfinpct__c.field-meta.xml
<CustomField>
    <fullName>Unfinpct__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Unfinpct</description>
    <label>Unfinpct</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>