force-app/main/default/objects/NCMT_Housing_Plan__c/fields/User_Defined_Spaces1_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>User_Defined_Spaces1_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>User Defined Spaces1 Use USF</description>
    <label>User Defined Spaces1 Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>