force-app/main/default/objects/NCMT_Housing_Plan__c/fields/VA_Ambulatory_Surgery_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>VA_Ambulatory_Surgery_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Ambulatory Surgery Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>