force-app/main/default/objects/NCMT_Housing_Plan__c/fields/VA_Infusion_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>VA_Infusion_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Infusion Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>