force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Workstations_open_office_Count__c.field-meta.xml
<CustomField>
    <fullName>Workstations_open_office_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>General Office Office workstations/open office Count</description>
    <label>Workstations/open office - Workstations</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>