force-app/main/default/objects/NCMT_Housing_Plan__c/fields/Workstations_open_office_Entered_USF__c.field-meta.xml
<CustomField>
    <fullName>Workstations_open_office_Entered_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Office workstations/open office Entered USF</description>
    <label>Workstations/open office Entered USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>