force-app/main/default/objects/NCMT_Housing_Plan__c/fields/X20_or_more_person_rooms_Count__c.field-meta.xml
<CustomField>
    <fullName>X20_or_more_person_rooms_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>20 or more person rooms Count</description>
    <label>20 or more person rooms - Seats</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>