force-app/main/default/objects/NCMT_Housing_Plan__c/fields/X20_or_more_person_rooms_Use_USF__c.field-meta.xml
<CustomField>
    <fullName>X20_or_more_person_rooms_Use_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>20 or more person rooms Use USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>