force-app/main/default/objects/NCMT_Housing_Plan__c/fields/X8_20_person_rooms_Count__c.field-meta.xml
<CustomField>
    <fullName>X8_20_person_rooms_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>8 - 20 person rooms Count</description>
    <label>8 - 20 person rooms - Rooms</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>