force-app/main/default/objects/NCMT_Housing_Plan__c/fields/X8_20_person_rooms_Entered_USF__c.field-meta.xml
<CustomField>
    <fullName>X8_20_person_rooms_Entered_USF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>8 - 20 person rooms Entered USF</description>
    <label>8 - 20 person rooms Entered USF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>