force-app/main/default/objects/NCMT_Housing_Plan__c/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <description>Record type for Gross Area and Useable Area record type</description>
    <label>Default</label>
</RecordType>