force-app/main/default/objects/NCMT_Housing_Plan__c/recordTypes/User_Defined.recordType-meta.xml
<RecordType>
    <fullName>User_Defined</fullName>
    <active>true</active>
    <description>Record type for User Defined Housing Plan Entry</description>
    <label>User Defined</label>
</RecordType>