force-app/main/default/objects/NCMT_Housing_Plan__c/validationRules/Check_for_Space_Plans_Entered.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_for_Space_Plans_Entered</fullName>
    <active>false</active>
    <description>Check for Space Plan entered for user defined housing plan</description>
    <errorConditionFormula>(RecordType.Name == &apos;User Defined&apos;) &amp;&amp; ( Total_USF__c &lt;=0)</errorConditionFormula>
    <errorMessage>No Space Plans are entered for User Defined Housing Plan</errorMessage>
</ValidationRule>