force-app/main/default/objects/NCMT_Housing_Plan__c/validationRules/Check_NewFitOut_for_NewConstruction_Proj.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_NewFitOut_for_NewConstruction_Proj</fullName>
    <active>true</active>
    <description>New Construction projects must only have New FIT Out selected.</description>
    <errorConditionFormula>(RecordType.Name == &apos;User Defined&apos;) 
&amp;&amp; (text( Project__r.Project_type__c ) == &apos;New Construction&apos; )
&amp;&amp; (text( Housing_Plan_Type__c ) &lt;&gt; &apos;New Fit Out&apos;)</errorConditionFormula>
    <errorMessage>Housing Plan Type selected must be New Fit Out for New Construction projects</errorMessage>
</ValidationRule>