force-app/main/default/objects/NCMT_Housing_Plan__c/validationRules/Custom_Housing_Plan_Per_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>Custom_Housing_Plan_Per_Project</fullName>
    <active>true</active>
    <description>For a Project of Type Gross Area or Useable Area, User cannot add user defined housing plan.</description>
    <errorConditionFormula>OR(Project__r.Gross_Area__c, Project__r.Useable_Area__c ) &amp;&amp;  (RecordType.Name  == &apos;User Defined&apos;)</errorConditionFormula>
    <errorMessage>For a Project of Type Gross Area or Useable Area, User cannot add user defined housing plan.</errorMessage>
</ValidationRule>