force-app/main/default/objects/NCMT_Housing_Plan__c/validationRules/One_Custom_Housing_Plan_Per_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>One_Custom_Housing_Plan_Per_Project</fullName>
    <active>false</active>
    <description>A project cannot have more than one custom housing plan</description>
    <errorConditionFormula>AND(ISNEW(), Project__r.UserDefinedHousingPlan_Record_Count__c &gt; 0)</errorConditionFormula>
    <errorMessage>A Project can have only one custom housing plan record.</errorMessage>
</ValidationRule>