force-app/main/default/objects/NCMT_Housing_Plan__c/validationRules/One_Default_Housing_Plan_Per_Project.validationRule-meta.xml
<ValidationRule>
    <fullName>One_Default_Housing_Plan_Per_Project</fullName>
    <active>false</active>
    <description>A project cannot have more than one housing plan</description>
    <errorConditionFormula>Useable_Area__c =0</errorConditionFormula>
    <errorMessage>A Project can have only one housing plan record.</errorMessage>
</ValidationRule>